--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,13 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+header {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    background-color: #1e172f;
+}
+
 nav{
     display: flex;
     justify-content: space-around;
@@ -152,7 +159,8 @@ article h4{
 }
 #contenedor-3{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 .texto{
     height: 110px;
@@ -288,6 +296,7 @@ footer{
 @media (max-width:1200px){
     body{
         width: 100%;
+        height: 100%;
     }
     h1{
         padding: 100px;
@@ -374,7 +383,7 @@ footer{
     } 
     div p{
         
-        margin-left: 10%;
+        margin-left: 0%;
         margin-right:10%;
     }
     div #contenedorBotones{
@@ -382,20 +391,14 @@ footer{
     }
     
     h1{
-        
-        
         padding-left: 10%;
-        font-size: 5%;
-        
-        
-        
+        font-size: 5%; 
     }
     #parte3{
         width: 100%;
         max-width: 100%;
     }
     div #conte{
-        
         width: 100%;
         max-width: 100%;
     }
@@ -403,7 +406,8 @@ footer{
         width: 80%;
     }
     p.precio{
-        max-width: 100%;
+        /*max-width: 100%;*/
+        width: 100%;
     }
     div #list{
         width: 100%;
@@ -415,12 +419,19 @@ footer{
 
 @media(max-width: 768px){
     body{
-        width: 769px;
-        height: cover;
+       width: 100%;
     }
     nav{
-        width: 769px;
         
+     min-width: 495px;
+    }
+    header{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    background-color: #1e172f;
+        align-items: center;
+               
     }
     .textoParte2 h3{
         
@@ -435,14 +446,59 @@ footer{
 }
 /*solo salta hacer la ultima<3*/
 @media(max-width: 480px){
+    
     body{
+        width: 100%;
+    }
+    
+    
+    .pagina{
         width: 769px;
-        height: cover;
+        height: auto;
     }
     nav{
         width: 769px;
         
     }
+    .pc{
+        display: none;
+        
+    }
+    .textoParte2{
+        height: 100%;
+        margin-left: 100px;
+        margin: 2%;
 
+    }
+    .textoParte2 h3{
+        margin-left: 150px;
+    }
+    .textoParte2  p{
+        margin-left: 320px;
+        text-align: center;
+    }
+
+    .textoParte2 h4{
+        margin-left: 350px;
+        margin-bottom: 35px;
+    }
+    #contenedoresPrecios{
+        flex-flow: row wrap;
+
+    }
+    .contenedorBlanco{
+        width: 500px;
+        margin-bottom: 3%;   
+    }
+    .precio{
+        
+    }
+    #parte3{
+        height: auto;
+    }
+
+    .telefono{
+        display: none;
+    }
 }
 
